--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "battle-war-server",
+  "name": "coup-game",
   "version": "1.0.0",
-  "description": "Battle War Node.js Edition",
+  "description": "Coup Game Realtime Node.js",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
